adding about section and navbar

--- a/src/components/Courses.astro
+++ b/src/components/Courses.astro
@@ -30,7 +30,8 @@
       left: 0;
       top: 0;
       background: #f3f4f5;
-      clip-path: polygon(50% 55%, 100% 0, 100% 100%, 0% 100%, 0 100%, 0 50%, 0 0);
+      clip-path: polygon(0 0, 50% 55%, 100% 0, 100% 100%, 0 100%);
+      
       z-index: -1;
     }
   
