Add Videos section and  Egresados

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,18 @@
 ---
 import About from "../components/About.astro";
 import Courses from "../components/Courses.astro";
+import Egresados from "../components/Egresados.astro";
 import HeroSection from "../components/HeroSection.astro";
 import NavBar from "../components/NavBar.astro";
+import Videos from "../components/Videos.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Welcome to Astro.">
-	<NavBar/>
+	<NavBar />
 	<HeroSection />
-	<Courses/>
-	<About/>
+	<Courses />
+	<About />
+	<Videos />
+	<Egresados/>
 </Layout>
