--- a/src/components/Egresados.astro
+++ b/src/components/Egresados.astro
@@ -23,7 +23,7 @@
     left: 0;
     top: 0;
 
-    background-image: url("fondos/waveMain.svg");
+    background-image: url("/fondos/waveMain.svg");
     background-size: cover;
     z-index: -1;
   }
