--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,7 @@
 ---
 import About from "../components/About.astro";
+import Companies from "../components/Companies.astro";
+import Contacts from "../components/Contacts.astro";
 import Courses from "../components/Courses.astro";
 import Egresados from "../components/Egresados.astro";
 import HeroSection from "../components/HeroSection.astro";
@@ -15,4 +17,6 @@ import Layout from "../layouts/Layout.astro";
 	<About />
 	<Videos />
 	<Egresados/>
+	<Companies/>
+	<Contacts/>
 </Layout>
